# memctl

./: .gitignore  CHANGELOG.md  ECO_QUICKSTART.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: workflow.yml
demos/: README.md  _demo_lib.sh  advanced_demo.sh  chat_demo.sh  eco_demo.sh  mock_chat_llm.sh  mock_llm.sh  must_have_demo.sh  run_demo.sh  run_loop_demo.sh
demos/corpus/: api_gateway.md  architecture.md  conception.md  database.md  security.md  session_management.md
demos/corpus-mini/: architecture.md  database.md  security.md
extras/claude-code/: README.md
extras/claude-code/hooks/: memctl_audit_logger.sh
extras/eco/: ECO.md  PILOT.md  README.md  eco-hint.sh  eco.md
memctl/: __init__.py  ask.py  chat.py  cli.py  config.py  consolidate.py  diff.py  export_import.py  extract.py  hooks.py  ingest.py  inspect.py  installer.py  loop.py  mount.py  policy.py  proposer.py  query.py  similarity.py  store.py  sync.py  types.py
memctl/mcp/: __init__.py  audit.py  formatting.py  guard.py  rate_limiter.py  server.py  session.py  tools.py
memctl/scripts/: __init__.py  install_claude_hooks.sh  install_eco.sh  install_mcp.sh  uninstall_eco.sh  uninstall_mcp.sh
memctl/templates/: __init__.py
memctl/templates/eco/: ECO.md  eco-hint.py  eco-hint.sh  eco.md
memctl/templates/eco/commands/: consolidate.md  diff.md  export.md  forget.md  recall.md  reindex.md  remember.md  scan.md  status.md
memctl/templates/hooks/: eco-nudge.py  eco-nudge.sh  memctl_audit_logger.py  memctl_safety_guard.py  memctl_safety_guard.sh
scripts/: install_claude_hooks.sh  install_eco.sh  install_mcp.sh  uninstall_eco.sh  uninstall_mcp.sh
tests/: test_ask.py  test_audit.py  test_chat.py  test_cli.py  test_config.py  test_config_validation.py  test_consolidate.py  test_contracts.py  test_diff.py  test_eco_templates.py  test_escalation_ladder.py  test_exit_codes.py  test_export_import.py  test_extract.py  test_forward_compat.py  test_fts_cascade.py  test_guard.py  test_hooks.py  test_ingest.py  test_injection_integrity.py  test_inspect.py  test_installer.py  test_loop.py  test_mcp_middleware.py  test_mcp_tools.py  test_memory_reset.py  test_mode_classification.py  test_mount.py  test_pii_patterns.py  test_pipe_compose.py  test_policy.py  test_prefix_search.py  test_proposer.py  test_query_normalization.py  test_rate_limiter.py  test_reindex.py  test_session.py  test_similarity.py  test_store.py  test_sync.py  (+2 more)
tests/fixtures/: contracts.json
