[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memctl"
version = "0.12.0"
description = "A Unix-native memory control plane for LLM orchestration"
authors = [
    {name = "Olivier Vitrac", email = "olivier.vitrac@adservio.fr"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["llm", "memory", "sqlite", "fts5", "mcp", "rag", "cli", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []  # Zero runtime dependencies — stdlib only

[project.optional-dependencies]
docs = [
    "python-docx>=1.0.0",
    "python-pptx>=0.6.21",
    "openpyxl>=3.1.0",
    "odfpy>=1.4.1",
]
mcp = ["mcp[cli]>=0.1.0"]
dev = ["pytest>=7.0", "ruff"]
all = ["memctl[docs]", "memctl[mcp]", "memctl[dev]"]

[project.scripts]
memctl = "memctl.cli:main"

[project.urls]
Homepage = "https://github.com/ovitrac/memctl"
Repository = "https://github.com/ovitrac/memctl"
Issues = "https://github.com/ovitrac/memctl/issues"
Changelog = "https://github.com/ovitrac/memctl/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["memctl*"]

[tool.ruff]
line-length = 100
target-version = "py310"
